2019-02-07 Philipp Klaus Krause <pkk AT spth.de>

	* .version,
	  Makefile.in,
	  configure,
	  configure.ac,
	  doc/sdccman.lyx:
	  Remove sdcclib.

2019-02-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c: fix bug #2863

2019-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* doc/Makefile.in:
	  Fix dependencies.

2019-02-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: add support for ez80_z80

2019-01-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/z80.src/ez80.cc: add needed header for int8_t

2019-01-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Clarify documentation on library path options.

2019-01-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Document bug #2858 workaround.

2019-01-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2866.c:
	  Fix bug #2866.

2019-01-12 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/time.c:
	  Make some variables const so save RAM on targets that do not have __code.

2019-01-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Fixes and improvements for stm8 peephole rules, patch by Visenri.
	* support/regression/tests/*.c:
	  Enable some regression tests that need struct assignment support.

2019-01-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  ez80_z80 fixes.
	* src/z80/gen.c:
	  Only use eZ80 lea for stack frame setup when doing so provides a code size advantage.
	* .version:
	  Bump version for stable ez80_z80 backend.
	* support/regression/Makefile.in:
	  Include ez80_z80 backend in test-z80 target.

2019-01-07 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/ports/ez80-z80/spec.mk:
	  Use new eZ80 uCsim in ez80_z80 regression tests.
	* src/z80/gen.c:
	  ez80_z80 fixes.

2019-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmem.c: